<resources>
    <string name="app_name">Ice Cream</string>
    <string name="title">Since It Is Cold Have Some Ice Cream</string>
    <string name="text_field">name of dessert</string>
    <string name="dairy_switch">Dairy-free</string>
    <string-array name="flavor_spinner">
        <item>salted caramel</item>
        <item>chocolate chocolate chocolate</item>
        <item>oreos in vanilla</item>
    </string-array>
    <string name="toggle1">CUP</string>
    <string name="toggle2">CONE</string>
    <string name="radio1">creamed ice</string>
    <string name="radio2">frozen yo</string>
    <string name="radio3">gelato</string>
    <string name="check1">jimmies</string>
    <string name="check2">choc drizzle</string>
    <string name="check3">legumes</string>
    <string name="button1">Treat Yo Self</string>
    <string name="text_view"></string>
    <string name="imageView1">ice cream image</string>
    <string name="button2">Find Treats Nearby</string>
    <string name="text_view2"></string>
    <string name="imageButton">earth image</string>
</resources>
