<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_ice_cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrewtaylor_shaut.icecream.find_ice_cream">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear1"
    android:layout_below="@+id/title">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/text_field"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/editText" />

    <Switch
        android:text="@string/dairy_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/switch1" />

</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear2"
    android:layout_below="@+id/linear1">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spinner"
        android:entries="@array/flavor_spinner"/>

    <ToggleButton
        android:text="@string/toggle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOn="@string/toggle1"
        android:textOff="@string/toggle2"/>

</LinearLayout>

<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear3"
    android:layout_below="@+id/linear2"
    android:layout_marginTop="10dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kindRadioGroup"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="@string/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />

    </RadioGroup>

</GridLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear4"
    android:layout_below="@+id/linear3">

    <CheckBox
        android:text="@string/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/checkBox" />

    <CheckBox
        android:text="@string/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/checkBox2" />

    <CheckBox
        android:text="@string/check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/checkBox3" />

</LinearLayout>


    <Button
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear4"
        android:layout_marginTop="25dp"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="findDessert"/>


    <TextView
        android:text="@string/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="@+id/imageView"
        android:layout_alignParentStart="@+id/imageView"
        android:layout_marginTop="20dp"
        android:id="@+id/textView2" />

    <ImageView
        android:contentDescription="@string/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignTop="@+id/button2"
        android:id="@+id/imageView" />

    <Button
        android:text="@string/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
